fixees on form schema to transalte

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,5 +6,15 @@
             "title": "Hi this is a solid start with nuxt",
             "description": "Meet the block"
         }
+    },
+    "auth": {
+        "email": "Email",
+        "pass": "Password",
+        "login": {
+            "submit": "Send"
+        },
+        "register": {
+            "submit": "send"
+        }
     }
 }
